move comment textarea sizing to more generic .form_input-small; fix comment_body overflow issue

--- a/resources/sass/_form.sass
+++ b/resources/sass/_form.sass
@@ -117,6 +117,9 @@
   textarea.form_input
     min-height: 120px
     max-height: 600px
+    &.form_input-small
+      min-height: 80px
+      max-height: 200px
   .form_select
     position: relative
     &:hover
