--- a/resources/sass/comment.sass
+++ b/resources/sass/comment.sass
@@ -12,9 +12,6 @@
   .comment_form
     .form_group
       margin-bottom: 10px
-    textarea.form_input
-      min-height: 80px
-      max-height: 200px
 
 .card .card_section-new_comment
   display: flex
@@ -27,5 +24,11 @@
     height: 48px
 .comment_body
   flex-grow: 1
-  flex-shrink: 0
+  flex-shrink: 1
 
+.comments_section
+  max-height: 500px
+  overflow-y: auto
+  margin-bottom: 0
+  .comments-empty
+    +icon-empty
